--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1;url=http://kannadamovie.github.io/lucia">
+        <!-- Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-43037304-1', 'kannadamovie.github.io');
+		  ga('send', 'pageview');
+		
+		</script>
+		<!-- End Analytics -->
         <script type="text/javascript">
             window.location.href = "http://kannadamovie.github.io/lucia"
         </script>
